# nostr

./: CHANGELOG.md  Cargo.toml
bindings/nostr-sdk-ffi/src/: policy.rs
bindings/nostr-sdk-ffi/src/protocol/event/tag/: standard.rs
contrib/scripts/: check-crates.sh
crates/nostr/: Cargo.toml
crates/nostr-connect/src/: client.rs
crates/nostr-database/src/events/: helper.rs
crates/nostr-lmdb/src/store/: ingester.rs
crates/nostr-relay-pool/: Cargo.toml
crates/nostr-relay-pool-sansio/: README.md
crates/nostr-relay-pool-sansio/src/: lib.rs  prelude.rs
crates/nostr-relay-pool-sansio/src/relay/: mod.rs
crates/nostr-relay-pool/src/: lib.rs  middleware.rs  prelude.rs  shared.rs  sync.rs
crates/nostr-relay-pool/src/pool/: builder.rs  error.rs  inner.rs  mod.rs
crates/nostr-relay-pool/src/relay/: error.rs  inner.rs  mod.rs  options.rs
crates/nostr-sdk/examples/: code_snippet.rs  lmdb.rs
crates/nostr-sdk/src/client/: builder.rs  error.rs  middleware.rs  mod.rs
crates/nostr/examples/embedded/: Cargo.toml
crates/nostr/src/: signer.rs
crates/nostr/src/event/: builder.rs  mod.rs
crates/nostr/src/event/tag/: error.rs  kind.rs  list.rs  mod.rs  standard.rs
crates/nostr/src/nips/: nip01.rs  nip19.rs  nip21.rs  nip34.rs  nip42.rs  nip53.rs  nip62.rs  nipc0.rs
crates/nostr/src/private/: tree.rs
crates/nostr/src/types/: url.rs
crates/nwc/src/: options.rs
signer/nostr-browser-signer-proxy/src/: lib.rs
